--- a/KillerBeesGaming Client/KillerBeesGaming Client/KillerBeesGaming Client.vbproj
+++ b/KillerBeesGaming Client/KillerBeesGaming Client/KillerBeesGaming Client.vbproj
@@ -102,6 +102,12 @@
       <DependentUpon>FrmClientScreen.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\FrmMinecraftLocations.Designer.vb">
+      <DependentUpon>FrmMinecraftLocations.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmMinecraftLocations.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\FrmOption.Designer.vb">
       <DependentUpon>FrmOption.vb</DependentUpon>
     </Compile>
