--- a/KillerBeesGaming Client/KillerBeesGaming Client/KillerBeesGaming Client.vbproj
+++ b/KillerBeesGaming Client/KillerBeesGaming Client/KillerBeesGaming Client.vbproj
@@ -69,8 +69,8 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ionic.Zip">
-      <HintPath>Librarys\DotNetZipLib-Runtime-v1.9\zip-v1.9\Ionic.Zip.dll</HintPath>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Kellerman Software\Sharp Zip Wrapper\SharpZipWrapperDemoVB\bin\Debug\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -83,6 +83,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="ZipHelper">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Kellerman Software\Sharp Zip Wrapper\SharpZipWrapperDemoVB\bin\Debug\ZipHelper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -99,7 +102,6 @@
   <ItemGroup>
     <Compile Include="Classes\Dialogs.vb" />
     <Compile Include="Classes\DsFavorites.vb" />
-    <Compile Include="Classes\ErrorReporting.vb" />
     <Compile Include="Classes\MinecraftLib.vb" />
     <Compile Include="Classes\Update.vb" />
     <Compile Include="Data\DsFavorites.Designer.vb">
