--- a/KillerBeesGaming Client/KillerBeesGaming Client/My Project/Settings.settings
+++ b/KillerBeesGaming Client/KillerBeesGaming Client/My Project/Settings.settings
@@ -23,5 +23,11 @@
     <Setting Name="LastIndexServer" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="PingServers" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="GetTwitter" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
